--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 spring.application.name=event-management-api
 
+# Database Configuration
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
 # Hibernate Configuration
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
