--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ build/
 ### Application Properties ###
 src/main/resources/application-dev.properties
 src/main/resources/application-prod.properties
+src/main/resources/application.properties
 
 ### Environment Files ###
 .env
