--- a/src/main/resources/application-example.properties
+++ b/src/main/resources/application-example.properties
@@ -3,3 +3,12 @@
 spring.datasource.url= jdbc:mysql://localhost:3306/your_database_name
 spring.datasource.username=your_database_username
 spring.datasource.password=your_database_password
+
+# Hibernate Configuration
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# JWT Configuration
+jwt.secret=minimum_32_character_secret_key
+jwt.expiration=24_hours_in_milliseconds_or_something_else
