--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,5 @@ spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # JWT Configuration
-jwt.secret=${JWT_SECRET}
-jwt.expiration=${JWT_EXPIRATION}
+jwt.secret=${JWT_SECRET:defaultsecretkey12345678901234567890}
+jwt.expiration=${JWT_EXPIRATION:86400000}
