--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,11 @@ spring.jpa.hibernate.ddl-auto=update
 # JWT Configuration
 jwt.secret=${JWT_SECRET:defaultsecretkey12345678901234567890}
 jwt.expiration=${JWT_EXPIRATION:86400000}
+
+# Email Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mjiabir12007@gmail.com
+spring.mail.password=khihwcdlxavasvpj
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
