create event with images - unsplash image

--- a/event-management-backend/src/main/resources/application-example.properties
+++ b/event-management-backend/src/main/resources/application-example.properties
@@ -12,3 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 # JWT Configuration
 jwt.secret=minimum_32_character_secret_key
 jwt.expiration=24_hours_in_milliseconds_or_something_else
+
+# Unsplash API Configuration
+unsplash.api.url=https://api.unsplash.com
+unsplash.api.access-key=your_unsplash_access_key_here
