--- a/event-management-backend/src/main/resources/application.properties
+++ b/event-management-backend/src/main/resources/application.properties
@@ -21,3 +21,8 @@ spring.mail.username=mjiabir12007@gmail.com
 spring.mail.password=khihwcdlxavasvpj
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Unsplash API Configuration
+unsplash.api.url=https://api.unsplash.com
+unsplash.api.access-key=${UNSPLASH_ACCESS_KEY:YwLsCNpCes9X1ZpeYUV31XJJw9weYrG6jDh3Smf9yWY}
+unsplash.api.secret-key=${UNSPLASH_SECRET_KEY:L8nQMpFoc03qULQZs2hk9TNwIxFRxd8x4oatwM6hoR8}
